<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="310dp"
        android:layout_height="52dp"
        android:background="#2196F3"
        android:backgroundTint="#2196F3"
        android:text="@string/calcular"
        android:textColorHighlight="#2196F3"
        android:textColorLink="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        app:rippleColor="#2196F3"
        app:strokeColor="#2196F3" />

    <TextView
        android:id="@+id/monto_de_propina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto_de_propina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.121" />

    <Switch
        android:id="@+id/switch_redonde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redondear"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regular"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/propinastico"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/valor_propinas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/valor_propinas"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/cuanto_va_a_dar_de_propina"
        android:inputType="numberDecimal"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <RadioGroup
        android:id="@+id/opciones_propina"
        android:checkedButton="@id/excelente"
        android:layout_width="243dp"
        android:layout_height="141dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pregunta_servicio"
        app:layout_constraintVertical_bias="0.161">

        <RadioButton
            android:id="@+id/excelente"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/excelente"
            app:layout_constraintBottom_toTopOf="@+id/bueno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.126"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valor_propinas"
            app:layout_constraintVertical_bias="0.617" />

        <RadioButton
            android:id="@+id/bueno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lo_intento_el_pana"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.155"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/valor_propinas"
            app:layout_constraintVertical_bias="0.42" />

        <RadioButton
            android:id="@+id/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/excelente"
            android:text="@string/con_propina_pero_denunciado"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bueno"
            app:layout_constraintVertical_bias="0.318" />


    </RadioGroup>

    <TextView
        android:id="@+id/pregunta_servicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="61dp"
        android:text="Como estuvo el servicio?"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor_propinas"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>